<resources>
    <string name="app_name">Contact Room</string>
    <string name="nameHint">Enter name</string>
    <string name="occupationHint">Enter occupation</string>
    <string name="saveButton">Save</string>
    <string name="empty">Fields are empty.</string>
    <string name="descriptionTextPlus">Plus Button Icon</string>
    <string name="placeholderText">Placeholder</string>
    <string name="updateButton">Update</string>
    <string name="deleteButton">Delete</string>
</resources>